<resources>
    <string name="app_name">ExercitaRecife</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="back_to_login">Back to Login</string>
    <string name="Login">Login</string>
    <string name="register">Register</string>
    <string name="exercita_recife">Exercita Recife</string>
    <string name="cardiovascular_exercises">Cardiovascular exercises</string>
    <string name="jump_rope">Jump rope</string>
    <string name="_15_minutes">15 minutes</string>
    <string name="light_walk">Light walk</string>
    <string name="_20_minutes">20 minutes</string>
    <string name="climb_stairs">Climb stairs</string>
    <string name="bicycle">Bicycle</string>
    <string name="_30_minutes">30 minutes</string>
    <string name="choose_a_maximum_of_2_per_day">Choose a maximum of 2 per day</string>
    <string name="exercises_for_upper_limbs">Exercises for upper limbs</string>
    <string name="exercises_for_lower_limbs">Exercises for lower limbs</string>
    <string name="push_ups">Push ups</string>
    <string name="abdominal">Abdominal</string>
    <string name="bench_triceps">Bench triceps</string>
    <string name="squat">Squat</string>
    <string name="sink">Sink</string>
    <string name="burpee">Burpee</string>
    <string name="squat_with_isometry">Squat with isometry</string>
    <string name="_3x_10_reps">3x 10 reps</string>
    <string name="_3x_20_reps">3x 20 reps</string>
    <string name="_3x_30_secs">3x 30 secs</string>
    <string name="cardiovascular">Cardiovascular</string>
    <string name="bodybuilding">Bodybuilding</string>
    <string name="msgError">User error</string>
    <string name="hint_usuario">Username</string>
</resources>