<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="93dp"
        android:layout_height="55dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="159dp"
        android:layout_marginTop="19dp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="368dp"
        android:layout_height="79dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="244dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/username_hint"
        android:inputType="text" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="368dp"
        android:layout_height="79dp"
        android:layout_below="@+id/usernameEditText"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="23dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordEditText"
        android:layout_marginStart="64dp"
        android:layout_marginTop="89dp"
        android:text="@string/register" />

    <Button
        android:id="@+id/backToLoginButton"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerButton"
        android:layout_marginStart="64dp"
        android:layout_marginTop="48dp"
        android:text="@string/back_to_login" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="312dp"
        android:layout_height="66dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="82dp"
        android:text="@string/exercita_recife"
        android:textAlignment="center"
        android:textColor="#0F4563"
        android:textSize="36sp" />

</RelativeLayout>
