<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="93dp"
        android:layout_height="55dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="156dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="368dp"
        android:layout_height="79dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="276dp"
        android:backgroundTint="@color/white"
        android:hint="@string/username_hint"
        android:shadowColor="#ffffff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="368dp"
        android:layout_height="79dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/white"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:shadowColor="#ffffff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="48dp"
        android:text="@string/Login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:text="@string/register"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="registerUser"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="312dp"
        android:layout_height="66dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="120dp"
        android:text="@string/exercita_recife"
        android:textAlignment="center"
        android:textColor="#0F4563"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>