<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="93dp"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="156dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewhome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewMarinheiro"
        android:layout_width="101dp"
        android:layout_height="79dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/marinheiro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewAbdominal"
        android:layout_width="101dp"
        android:layout_height="79dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/abdominal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewMarinheiro" />

    <ImageView
        android:id="@+id/imageViewTriceps"
        android:layout_width="101dp"
        android:layout_height="79dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="4dp"
        android:src="@drawable/tricepsbanco"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewAbdominal" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:text="@string/exercises_for_upper_limbs"
        android:textColor="#0F4563"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_marginStart="4dp"
        android:text="@string/exercises_for_lower_limbs"
        android:textColor="#0F4563"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewTriceps" />

    <ImageView
        android:id="@+id/imageViewAgachamento"
        android:layout_width="101dp"
        android:layout_height="79dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/agachamento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewTriceps" />

    <ImageView
        android:id="@+id/imageViewAfundo"
        android:layout_width="101dp"
        android:layout_height="79dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="4dp"
        android:src="@drawable/afundo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewAgachamento" />

    <ImageView
        android:id="@+id/imageViewBurpee"
        android:layout_width="101dp"
        android:layout_height="79dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="4dp"
        android:src="@drawable/burpee"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewAfundo" />

    <ImageView
        android:id="@+id/imageViewAgachamentoIsometria"
        android:layout_width="101dp"
        android:layout_height="79dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="4dp"
        android:src="@drawable/agachamentoisometria"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewBurpee" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:text="@string/push_ups"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewMarinheiro"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:text="@string/abdominal"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewAbdominal"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="28dp"
        android:text="@string/bench_triceps"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewTriceps"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:text="@string/squat"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewAgachamento"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:text="@string/sink"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewAfundo"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:text="@string/burpee"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewBurpee"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="300dp"
        android:layout_height="27dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="36dp"
        android:text="@string/squat_with_isometry"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewAgachamentoIsometria"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/_3x_10_reps"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewMarinheiro"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/_3x_20_reps"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewAbdominal"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/_3x_10_reps"
        app:layout_constraintStart_toEndOf="@+id/imageViewTriceps"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/_3x_10_reps"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewAgachamento"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/_3x_10_reps"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewAfundo"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/_3x_10_reps"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewBurpee"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/_3x_30_secs"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewAgachamentoIsometria"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

</androidx.constraintlayout.widget.ConstraintLayout>