<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/containerTop"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></View>


    <View
        android:id="@+id/containerMiddle"
        android:layout_width="450dp"
        android:layout_height="120dp"
        android:background="@color/gold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerTop">

    </View>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="130dp"
        android:layout_height="80dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="651dp"
        android:src="@drawable/logoexercitarecife"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </ImageView>

    <ImageView
        android:id="@+id/imageViewhome"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/botaohome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:text="@string/cardiovascular_exercises"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerTop" />

    <ImageView
        android:id="@+id/imageViewPularCorda"
        android:layout_width="101dp"
        android:layout_height="79dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="88dp"
        android:src="@drawable/pularcorda"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/climb_stairs"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewEscada"
        app:layout_constraintTop_toBottomOf="@+id/imageViewCaminhada" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="108dp"
        android:text="@string/jump_rope"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewPularCorda"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/_20_minutes"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewEscada"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <ImageView
        android:id="@+id/imageViewBicicleta"
        android:layout_width="101dp"
        android:layout_height="79dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/bicicleta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewEscada" />

    <ImageView
        android:id="@+id/imageViewCaminhada"
        android:layout_width="80dp"
        android:layout_height="79dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/caminhada"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPularCorda" />

    <ImageView
        android:id="@+id/imageViewEscada"
        android:layout_width="80dp"
        android:layout_height="79dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/escada"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewCaminhada" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/_15_minutes"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewPularCorda"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/light_walk"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewCaminhada"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPularCorda" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:text="@string/_30_minutes"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewBicicleta"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/bicycle"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewBicicleta"
        app:layout_constraintTop_toBottomOf="@+id/imageViewEscada" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/_20_minutes"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewCaminhada"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="295dp"
        android:layout_height="66dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="4dp"
        android:text="@string/choose_a_maximum_of_2_per_day"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>